# viv-engine

./: .env.example  .gitignore  Makefile  README.md  Script.sql  docker-compose.yml.example  pyproject.toml  script.sql
app/: celery_app.py  config.py  db.py  main.py
app/api/: admin_jobs.py
app/models/: __init__.py  pipeline_log.py  pipeline_run.py  word.py  word_definition.py  word_search_result.py  word_source.py  word_topic_score.py  word_usage_summary.py
app/tasks/: ai_topic_tasks.py  basic_enrichment_tasks.py  definition_tasks.py  frequency_tasks.py  pipeline_logging.py  research_pipeline_tasks.py  research_tasks.py  usage_summary_tasks.py
scripts/: api.sh  beat.sh  dev.sh  stop_workers.sh  worker.sh  worker_ai.sh  worker_control.sh  worker_definition.sh  worker_frequency.sh  worker_search.sh
tests/: test_api.py
