[project]
name = "vivengineproject"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "celery>=5.6.3",
    "celery-types>=0.23.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "langchain>=0.3.30",
    "langchain-openai>=0.3.35",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.39.0",
    "wordfreq>=3.1.1",
]
